# qusp

./: .gitignore  Cargo.toml  README.md  qusp.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  e2e.yml  release.yml
crates/qusp-cli/: Cargo.toml
crates/qusp-cli/src/: main.rs  output.rs  script.rs
crates/qusp-cli/src/cmd/: admin.rs  install.rs  mod.rs  pin.rs  query.rs  run.rs  shell.rs
crates/qusp-core/: Cargo.toml
crates/qusp-core/src/: backend.rs  http.rs  lib.rs  lock.rs  manifest.rs  orchestrator.rs  paths.rs  registry.rs
crates/qusp-core/src/backends/: almide.rs  bun.rs  clojure.rs  common.rs  crystal.rs  dart.rs  deno.rs  elixir.rs  elm.rs  erlang.rs  gleam.rs  go.rs  groovy.rs  haskell.rs  java.rs  julia.rs  kotlin.rs  lua.rs  mod.rs  node.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  zig.rs
crates/qusp-core/src/domain/: error.rs  mod.rs  pinned.rs  plan.rs  types.rs
crates/qusp-core/src/effects/: farm.rs  http.rs  install_lock.rs  mod.rs  progress.rs  space_trap.rs
docs/: ARCHITECTURE.md  DESIGN.md  JSON_SCHEMA.md  RELEASE_PREP.md
docs/roadmap/: GRAND_PLAN.md  README.md
docs/roadmap/active/: dogfood-and-1.0.md  migration-plan.md  papercuts.md
docs/roadmap/done/: benchmark-vs-mise.md  clojure.md  cross-backend-requires.md  crystal.md  dart.md  ddd-phase-1-pinned-manifest.md  ddd-phase-2-plan.md  ddd-phase-3-5-backend-migration.md  ddd-phase-3-effects.md  documentation.md  e2e-tests.md  elixir-and-erlang.md  full-migration-completion.md  groovy.md  haskell.md  initial-six-backends.md  java-foojay.md  julia.md  kotlin.md  lua.md  python-fuzzy-and-partial.md  release-infra.md  rust-and-bun.md  scala.md  x-script-routing.md
docs/roadmap/on-hold/: backend-unit-tests.md  cache-management.md  cargo-binstall.md  clojure.md  concurrent-install-safety.md  crystal.md  current-resolved-path.md  dart-and-flutter.md  did-you-mean-cross-backend.md  elixir-and-erlang.md  error-richness-distribution-defaults.md  flutter.md  force-reinstall.md  groovy.md  haskell.md  help-richness-and-pager.md  hospitality-parity.md  inline-script-metadata.md  julia.md  jvm-family-via-coursier.md  linux-benchmark.md  list-remote-richness.md  lua.md  luajit.md  machine-readable-output.md  network-resilience-retry.md  nix-l1.md  nix-l2.md  nix-l3.md  ocaml.md  path-not-on-path-guidance.md  php.md  progress-display-uv-class.md  python-tools-via-uv.md  qusp-plan.md  qusp-upgrade.md  r.md  range-version-specs.md  reproducibility-audit.md  sbom-export.md  (+9 more)
packaging/homebrew/: qusp.rb.template
scripts/: bench.sh  e2e.sh  refresh_default_versions.py
scripts/e2e/: bun.sh  clojure.sh  common.sh  crystal.sh  dart.sh  deno.sh  elixir.sh  erlang.sh  farm.sh  go.sh  groovy.sh  haskell.sh  inline_metadata.sh  install_hardening.sh  java.sh  json_output.sh  julia.sh  kotlin.sh  lua.sh  node.sh  python.sh  ruby.sh  rust.sh  scala.sh  smoke.sh  x_script.sh  zig.sh
