[package]
name = "qusp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for qusp: backend trait, manifest, lock, resolution chain."

[dependencies]
anyv-core.workspace = true
gv-core.workspace = true
rv-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
async-trait.workspace = true
futures.workspace = true
sha2.workspace = true
hex.workspace = true
base64 = "0.22"
bytes = "1"
# `.tar.xz` decompression for Zig (only backend that needs xz so far).
# Pure-Rust impl to avoid pulling in liblzma; slower than xz2 but install
# is one-shot so the difference is invisible.
lzma-rs = "0.3"
tar = "0.4"
tracing.workspace = true
